[package]
name = "esp-rs-test"
version = "0.1.0"
authors = ["Leonardo Micelli <leonardo.micelli@studio.unibo.it>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.47.3", default-features = false }
# We need to import rufi libraries independently because importing rufi as a whole would cause an indirect dependency to
# tokio and signal-hook-registry
rf-core = "0.4.3"
rf-distributed = "0.4.3"

[build-dependencies]
embuild = "0.31.3"
